--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,12 +10,12 @@
 
     <ImageView
         android:id="@+id/launcher_image"
-        android:layout_width="267dp"
-        android:layout_height="241dp"
+        android:layout_width="159dp"
+        android:layout_height="142dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@mipmap/ic_launcher_logo_foreground" />
+        app:srcCompat="@drawable/mask" />
 
     <TextView
         android:id="@+id/app_name"
@@ -34,6 +34,7 @@
         android:id="@+id/material_et_email"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
+        android:layout_marginTop="48dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/app_name"
