--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -35,7 +35,7 @@
         android:id="@+id/material_et_nama"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="34dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/title_maskerin"
@@ -88,7 +88,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/material_et_password"
+        android:id="@+id/profile_et_password"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:layout_marginTop="12dp"
@@ -117,12 +117,13 @@
         android:text="@string/action_registration"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/material_et_password" />
+        app:layout_constraintTop_toBottomOf="@id/profile_et_password" />
 
     <TextView
         android:id="@+id/tv_dont_have_account"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
 
         android:text="Sudah punya akun?"
         app:layout_constraintTop_toBottomOf="@id/button"
@@ -133,6 +134,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
 
         android:fontFamily="sans-serif-black"
         android:onClick="LoginOnClick"
