--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#008ba3</color>
     <color name="colorAccent">#00bcd4</color>
     <color name="grey">#808080</color>
+    <color name="white">#FFFFFF</color>
 </resources>
